--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jest": "^27.0.6"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
